--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ngrx/store": "^7.4.0",
+    "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.1.0",
